--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -21,7 +21,7 @@ h6 {
 header.masthead {
   position: relative;
   background-color: #343a40;
-  background: url("../img/trees.jpeg") no-repeat center center;
+  background: url("../img/boy-2026064_1280.png") no-repeat center center;
   background-size: cover;
   padding-top: 8rem;
   padding-bottom: 8rem;
