--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -21,7 +21,7 @@ h6 {
 header.masthead {
   position: relative;
   background-color: #343a40;
-  background: url("../img/boy-2026064_1280.png") no-repeat center center;
+  background: url("../img/crowd-2045498_1920.jpg") no-repeat center center;
   background-size: cover;
   padding-top: 8rem;
   padding-bottom: 8rem;
@@ -104,7 +104,7 @@ header.masthead h1 {
 .call-to-action {
   position: relative;
   background-color: #343a40;
-  background: url("../img/boy-2026064_1280.png") no-repeat center center;
+  background: url("../img/crowd-2045498_1920.jpg") no-repeat center center;
   background-size: cover;
   padding-top: 7rem;
   padding-bottom: 7rem;
