--- a/scss/_call-to-action.scss
+++ b/scss/_call-to-action.scss
@@ -1,7 +1,7 @@
 .call-to-action {
   position: relative;
   background-color: $gray-800;
-  background: url('../img/boy-2026064_1280.png') no-repeat center center;
+  background: url('../img/crowd-2045498_1920.jpg') no-repeat center center;
   @include background-cover;
   padding-top: 7rem;
   padding-bottom: 7rem;
