--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -1,7 +1,7 @@
 header.masthead {
   position: relative;
   background-color: $gray-800;
-  background: url('../img/boy-2026064_1280.png') no-repeat center center;
+  background: url('../img/crowd-2045498_1920.jpg') no-repeat center center;
   @include background-cover;
   padding-top: 8rem;
   padding-bottom: 8rem;
