--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -20,7 +20,7 @@ h6 {
 
 header.masthead {
   position: relative;
-  background-color: #343a40;
+  background-color: #ffffff;
   background: url("../img/crowd-2045498_1920.jpg") no-repeat center center;
   background-size: cover;
   padding-top: 8rem;
