--- a/scss/_call-to-action.scss
+++ b/scss/_call-to-action.scss
@@ -1,6 +1,6 @@
 .call-to-action {
   position: relative;
-  background-color: $gray-800;
+  background-color: $white-800;
   background: url('../img/crowd-2045498_1920.jpg') no-repeat center center;
   @include background-cover;
   padding-top: 7rem;
