--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -29,7 +29,7 @@ header.masthead {
 
 header.masthead .overlay {
   position: absolute;
-  background-color: #212529;
+  background-color: #ffffff;
   height: 100%;
   width: 100%;
   top: 0;
@@ -103,7 +103,7 @@ header.masthead h1 {
 
 .call-to-action {
   position: relative;
-  background-color: #343a40;
+  background-color: #ffffff;
   background: url("../img/crowd-2045498_1920.jpg") no-repeat center center;
   background-size: cover;
   padding-top: 7rem;
@@ -112,7 +112,7 @@ header.masthead h1 {
 
 .call-to-action .overlay {
   position: absolute;
-  background-color: #212529;
+  background-color: #ffffff;
   height: 100%;
   width: 100%;
   top: 0;
