--- a/scss/_call-to-action.scss
+++ b/scss/_call-to-action.scss
@@ -7,7 +7,7 @@
   padding-bottom: 7rem;
   .overlay {
     position: absolute;
-    background-color: $gray-900;
+    background-color: $white-900;
     height: 100%;
     width: 100%;
     top: 0;
