--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -1,13 +1,13 @@
 header.masthead {
   position: relative;
-  background-color: $gray-800;
+  background-color: $white-800;
   background: url('../img/crowd-2045498_1920.jpg') no-repeat center center;
   @include background-cover;
   padding-top: 8rem;
   padding-bottom: 8rem;
   .overlay {
     position: absolute;
-    background-color: $gray-900;
+    background-color: $white-900;
     height: 100%;
     width: 100%;
     top: 0;
